Fix header overlapping scrollbar in builtin pages

--- a/app/stylesheets/builtin-pages.less
+++ b/app/stylesheets/builtin-pages.less
@@ -332,8 +332,9 @@
     flex-wrap: nowrap;
     position: fixed;
     top: 0;
+    left: 0;
+    right: 0;
     z-index: 5000;
-    width: 100%;
     border-bottom: 1px solid rgb(210, 210, 213);
     box-shadow: 0 2px 0 rgba(0,0,0,.025);
 
